--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Garamond, "Times New Roman", serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+* {
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 code {
